NetBSD Problem Report #48359
From ryo_on@yk.rim.or.jp Fri Nov 1 17:30:35 2013
Return-Path: <ryo_on@yk.rim.or.jp>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (verified OK))
by mollari.NetBSD.org (Postfix) with ESMTPS id D21BFA60E9
for <gnats-bugs@gnats.NetBSD.org>; Fri, 1 Nov 2013 17:30:35 +0000 (UTC)
Message-Id: <20131101173031.C3CDFDF3AC@mail.SiriusCloud.jp>
Date: Sat, 2 Nov 2013 02:30:31 +0900 (JST)
From: ryoon@NetBSD.org
Reply-To: ryoon@NetBSD.org
To: gnats-bugs@gnats.NetBSD.org
Subject: NetBSD/cobalt 6.99.25 GENERIC kernel freeze at initializing com0
X-Send-Pr-Version: 3.95
>Number: 48359
>Category: port-cobalt
>Synopsis: NetBSD/cobalt 6.99.25 GENERIC kernel freeze at initializing com0
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: port-cobalt-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Fri Nov 01 17:35:00 +0000 2013
>Closed-Date: Sun Dec 15 12:02:57 +0000 2013
>Last-Modified: Sun Dec 15 12:02:57 +0000 2013
>Originator: Ryo ONODERA
>Release: NetBSD 6.99.25
>Organization:
>Environment:
System: NetBSD tellurium.elements.tetera.org 6.99.25 NetBSD 6.99.25 (DTRACE) #1: Fri Nov 1 20:29:16 JST 2013 ryo_on@tellurium.elements.tetera.org:/usr/obj/amd64/sys/arch/amd64/compile/DTRACE amd64
Architecture: x86_64
Machine: amd64
>Description:
Booting from NFS, GENERIC kernel freezes when detecting com0.
com0 line should be
com0 at mainbus0 addr 0x1c800000 level 3: st16650a, working fifo
or similar.
Cobalt Microserver Diagnostics - 'We serve it, you surf it'
Built Wed Mar 3 21:26:25 PST 1999
1.LCD Test................................PASS
2.Controller Test.........................PASS
5.Bank 0:.................................64M
6.Bank 1:.................................64M
7.Bank 2:.................................64M
8.Bank 3:.................................64M
9.Serial Test.............................PASS
10.PCI Expansion Slot....................**Unknown Card**
12.IDE Test................................PASS
13.Ethernet Test...........................PASS
16.RTC Test................................PASS
Decompressing done
Decompressing done.
>> NetBSD/cobalt 6.99.25 Bootloader, Revision 1.0 (Thu Oct 31 19:23:06 UTC 2013) [@0x80f00000]
>> Model: Cobalt Qube 2
>> Memory: 262144 k
>> PROM boot string: root=/dev/nfs nfsroot=/nfsroot nfsaddrs=bootp
Boot [nfs:netbsd]:
Loading: nfs:netbsd
5067664+132976 [229520+230376]=0x5664c8
Starting at 0x80001000
pmap_steal_memory: seg 0: 0x567 0x567 0xfffe 0xfffe
pmap_steal_memory: seg 0: 0x59d 0x59d 0xfffe 0xfffe
pmap_steal_memory: seg 0: 0x59f 0x59f 0xfffe 0xfffe
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013
The NetBSD Foundation, Inc. All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
The Regents of the University of California. All rights reserved.
NetBSD 6.99.25 (GENERIC) #0: Thu Oct 31 19:39:01 UTC 2013
builds@b8.netbsd.org:/home/builds/ab/HEAD/cobalt/201310311700Z-obj/home/builds/ab/HEAD/src/sys/arch/cobalt/compile/GENERIC
Cobalt Qube 2
total memory = 256 MB
avail memory = 245 MB
mainbus0 (root)
com0 at mainbus0 addr 0x1c800000 level 3
>How-To-Repeat:
Boot NetBSD/cobalt 6.99.25 with GENERIC kernel.
>Fix:
I have no idea. Please fix this.
>Release-Note:
>Audit-Trail:
From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
To: gnats-bugs@NetBSD.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: Re: port-cobalt/48359: NetBSD/cobalt 6.99.25 GENERIC kernel freeze
at initializing com0
Date: Sat, 2 Nov 2013 03:31:26 +0900
> com0 at mainbus0 addr 0x1c800000 level 3
Looks broken by recent 16750 changes.
---
Izumi Tsutsui
From: Ryo ONODERA <ryo_on@yk.rim.or.jp>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: port-cobalt/48359: NetBSD/cobalt 6.99.25 GENERIC kernel freeze
at initializing com0
Date: Sun, 03 Nov 2013 13:01:22 +0900 (JST)
From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>, Date: Fri, 1 Nov 2013 18:35:00 +0000 (UTC)
> The following reply was made to PR port-cobalt/48359; it has been noted by GNATS.
>
> From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
> To: gnats-bugs@NetBSD.org
> Cc: tsutsui@ceres.dti.ne.jp
> Subject: Re: port-cobalt/48359: NetBSD/cobalt 6.99.25 GENERIC kernel freeze
> at initializing com0
> Date: Sat, 2 Nov 2013 03:31:26 +0900
>
> > com0 at mainbus0 addr 0x1c800000 level 3
>
> Looks broken by recent 16750 changes.
Hi,
Thanks for your suggestion.
The following patch solve my freeze.
(of course, NetBSD/cobalt cannot get command prompt yet)
I have no 16750 device, and this is not tested with 16750.
If the device that has 16750 has COM_16750 option in kernel config file.
This may work for 16750.
Index: sys/dev/ic/com.c
===================================================================
RCS file: /cvsroot/src/sys/dev/ic/com.c,v
retrieving revision 1.317
diff -u -r1.317 com.c
--- sys/dev/ic/com.c 3 Oct 2013 13:23:03 -0000 1.317
+++ sys/dev/ic/com.c 3 Nov 2013 03:53:17 -0000
@@ -492,6 +492,7 @@
#endif
sc->sc_fifolen = 16;
+#ifdef COM_16750
/*
* TL16C750 can enable 64byte FIFO, only when DLAB
* is 1. However, some 16750 may always enable. For
@@ -522,6 +523,7 @@
SET(sc->sc_hwflags, COM_HW_AFE);
} else
CSR_WRITE_1(regsp, COM_REG_FIFO, fcr);
+#endif
#ifdef COM_16650
CSR_WRITE_1(regsp, COM_REG_LCR, lcr);
@@ -531,10 +533,11 @@
fifo_msg = "st16650a, working fifo";
else
#endif
- if (sc->sc_fifolen == 64)
+#ifdef COM_16750
fifo_msg = "tl16c750, working fifo";
- else
+#elif COM_16650
fifo_msg = "ns16550a, working fifo";
+#endif
} else
fifo_msg = "ns16550, broken fifo";
else
Cobalt Microserver Diagnostics - 'We serve it, you surf it'
Built Wed Mar 3 21:26:25 PST 1999
1.LCD Test................................PASS
2.Controller Test.........................PASS
5.Bank 0:.................................64M
6.Bank 1:.................................64M
7.Bank 2:.................................64M
8.Bank 3:.................................64M
9.Serial Test.............................PASS
10.PCI Expansion Slot....................**Unknown Card**
12.IDE Test................................PASS
13.Ethernet Test...........................PASS
16.RTC Test................................PASS
Decompressing done
Decompressing - done.
>> NetBSD/cobalt 6.99.23 Bootloader, Revision 1.0 (Sun Nov 3 06:03:55 JST 2013) [@0x80f00000]
>> Model: Cobalt Qube 2
>> Memory: 262144 k
>> PROM boot string: root=/dev/nfs nfsroot=/nfsroot nfsaddrs=bootp
Boot [nfs:netbsd]:
Loading: nfs:netbsd
5067312+132944 [229520+230376]=0x566348
Starting at 0x80001000
pmap_steal_memory: seg 0: 0x567 0x567 0xfffe 0xfffe
pmap_steal_memory: seg 0: 0x59d 0x59d 0xfffe 0xfffe
pmap_steal_memory: seg 0: 0x59f 0x59f 0xfffe 0xfffe
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013
The NetBSD Foundation, Inc. All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
The Regents of the University of California. All rights reserved.
NetBSD 6.99.25 (GENERIC) #1: Sun Nov 3 21:48:44 JST 2013
ryo_on@deuterium.ryoon.net:/usr/obj/cobalt/sys/arch/cobalt/compile/GENERIC
Cobalt Qube 2
total memory = 256 MB
avail memory = 245 MB
mainbus0 (root)
com0 at mainbus0 addr 0x1c800000 level 3: st16650a, working fifo
com0: console
cpu0 at mainbus0: QED RM5200 CPU (0x28a0) Rev. 10.0 with built-in FPU Rev. 10.0
cpu0: 48 TLB entries, 16MB max page size
cpu0: 32KB/32B 2-way set-associative L1 instruction cache
cpu0: 32KB/32B 2-way set-associative write-back L1 data cache
mcclock0 at mainbus0 addr 0x10000070: mc146818 compatible time-of-day clock
panel0 at mainbus0 addr 0x1f000000
gt0 at mainbus0 addr 0x14000000
pci0 at gt0
pchb0 at pci0 dev 0 function 0: Galileo GT-64111 System Controller, rev 1
tlp0 at pci0 dev 7 function 0: DECchip 21143 Ethernet, pass 4.1
tlp0: interrupting at level 1
tlp0: Ethernet address 00:10:e0:00:5b:b3
lxtphy0 at tlp0 phy 1: LXT970 10/100 media interface, rev. 3
lxtphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, auto
pcib0 at pci0 dev 9 function 0
pcib0: VIA Technologies VT82C586 PCI-ISA Bridge, rev 39
viaide0 at pci0 dev 9 function 1
viaide0: VIA Technologies VT82C586 (Apollo VP) ATA33 controller
viaide0: primary channel interrupting at irq 14
atabus0 at viaide0 channel 0
viaide0: secondary channel interrupting at irq 15
atabus1 at viaide0 channel 1
VIA Technologies VT83C572 USB Controller (USB serial bus, revision 0x02) at pci0 dev 9 function 2 not configured
VIA Technologies VT83C572 USB Controller (USB serial bus, revision 0x61) at pci0 dev 10 function 0 not configured
VIA Technologies VT83C572 USB Controller (USB serial bus, revision 0x61) at pci0 dev 10 function 1 not configured
VIA Technologies VT8237 EHCI USB Controller (USB serial bus, interface 0x20, revision 0x62) at pci0 dev 10 function 2 not configured
VIA Technologies VT6306 IEEE 1394 Host Controller (Firewire serial bus, interface 0x10, revision 0x46) at pci0 dev 10 function 3 not configured
tlp1 at pci0 dev 12 function 0: DECchip 21143 Ethernet, pass 4.1
tlp1: interrupting at level 2
tlp1: Ethernet address 00:10:e0:00:55:b6
lxtphy1 at tlp1 phy 1: LXT970 10/100 media interface, rev. 3
lxtphy1: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, auto
wd0 at atabus0 drive 1
wd0: <WDC WD1600AB-22DYA0>
wd0: 149 GB, 310101 cyl, 16 head, 63 sec, 512 bytes/sect x 312581808 sectors
boot device: tlp0
root on tlp0
State-Changed-From-To: open->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Sun, 15 Dec 2013 12:02:57 +0000
State-Changed-Why:
I committed a similar fix.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.