Only attempt to set 64byte fifo for 16750 when COM_16750 is defined.

Hi kiyohara.

PR/48359 NetBSD/cobalt 6.99.25 GENERIC kernel freeze at initializing com0